- Include EULA to be shown during execution of setup.sh 
- Added messages for vobcopy process
- Create svn branch 0.6.12

Fixes:

- setup.sh did not create directory /dvdrip/dvd (fixed 217)
- Test if the ssh-user inside the settings is correct.
  If the addon is started with a user that is not inside the settings
  xbmc get a little hickup and crash .... (fixed 230)
- Text-ID 33301 was definied twice (fixed 239)
- directory .xbmc/userdata/addon_data/script.video.swiss.army.knife/dvd/tmp
  was not created during setup (fixed 240)
- wrong permissions for setup.done inside setup.sh (fixed 241)
- PID-value from dvd-vcopy shell script was not correct


----------------------------------------------------------------------------------------------------
Date : 08.23.2010 | Release : 0.6.13    | Author  : H.Weber | CVS:244-252
----------------------------------------------------------------------------------------------------

Changes:

- Update makemkv to version 1.5.8 (32 and 64 bit)
- break handbrak and makemkv installation into seperate sections  
- Do check during setup if handbrake or makemkv is allready installed
- Increased a few time-out values 
- create svn branch 0.6.13

Fixes:
- rename setup.done to 0.X.Y-setup.done that allways after a upgrade
  the setup file with all directorys and installations is passed.


----------------------------------------------------------------------------------------------------
Date : 08.29.2010 | Release : 0.6.14    | Author  : H.Weber | CVS:253-261
----------------------------------------------------------------------------------------------------


Changes:

- Added settings for multiple timeout values that are used inside 
  python.
  Timeout t1 : state-file default value 5 secounds 
  Timeout t2 : dvd-chapter file value 10 secounds
  Timeout t3 : bluray-chapter file value 100 secounds

Fixes:

- The bluray.progress file was not added to the filelist to kill a job
- setup.sh had a wrong entry for EULA-file 







